gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

7/11/99 Chnaged the return values of the Scheme functions in g_*.c from
	0 and -1 to #t and #f.

	Cleaned up gschem.c and i_basic.c. (by Kazu Hirata)

7/11/99 Cleaned up a_pan.c, a_zoom.c, g_key.c, g_funcs.c. (by Kazu Hirata)

7/10/99	Updated a few places where it's important to call set_window
	(part of the math speed improvements)

	Put in code that controls if text is either: xored (completely drawn)
	when doing a copy/move/place (the outline that's dragged) or
	a simple line is drawn.  This makes the placing/copying/moving of
	large symbols faster

	Added an rc keyword to control above: text-feedback
	(either only-when-readable or always)

	Added text-display-zoomfactor to *rc file (control at which zoom factor
	text is displayed completely during operations like copy/move/place)

	Removed some // comments (should not use // comments in general)

7/6/99 	Didn't really disable libgdgeda when using --disable-gdgeda
	Now fixed.

7/5/99	Added in manually configure.in patch Manu provided to help in his
	rpm building procedures

	Added pintype to attribute-name list in system-gschemrc

	Slightly rearranged attribute-name list

	Fixed all warnings

	Fixed some misc problems in configure.in (missing if test to make sure
	libgeda-config was found)

	Got configure.in to be almost identical to gnetlist/configure.in

	Updated man page a tiny bit

7/4/99	Added updated test_verilog_1.sch to the dist from Mike Jarabek

	Added an options menu to the image write dialog box

7/3/99 	Went through all sample schematic and removed all zero length/etc...
	objects

7/2/99  Fixed the ./configure stuff dealing with libgdgeda so that it works