@@ -9,6 +9,13 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+7/12/99 Moved the core of a_pan into a_pan_calc
+
+	Implemented the zoom and pan to where the mouse is (center at the
+	current mouse location).  Only works with the hotkeys.
+
+	Added i_callback_*_zoom_in_hotkey and *_zoom_out_hotkey
+
 7/11/99 Chnaged the return values of the Scheme functions in g_*.c from
 	0 and -1 to #t and #f.
 
